# opendota-mcp-server

./: .env.example  Dockerfile  README.md  pyproject.toml  smithery.yaml
scripts/: precommit.sh  setup_env.sh  utils.sh
src/: client.py
src/opendota-server/: server.py
src/opendota_server/: server.py
tests/: __init__.py  test_api_functionality.py  test_api_mocks.py  test_server.py
